--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         :  "théo-emmerich-023143107/?originalSubdomain=fr"
+  linkedin         :  "theo-emmerich-023143107"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
