--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "images/profile.jpeg"
-  name             : "Your Sidebar Name"
+  name             : "Theo Emmerich"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Lyon, France""
+  employer         : "ENS Lyon"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "theo.emmerich@ens-lyon.fr" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
