--- a/_config.yml
+++ b/_config.yml
@@ -21,15 +21,10 @@ repository               : "academicpages/academicpages.github.io"
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
-  # Biographic information
+  name             : "Theo Emmerich"
   avatar           : "images/profile.jpeg"
-  name: "Theo Emmerich"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Lyon, France""
-  employer         : "ENS Lyon"
-  uri              : # URL
-  email            : "theo.emmerich@ens-lyon.fr" 
+  location         : "Lyon, France"
+  email            : "theo.emmerich@ens-lyon.fr"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
