--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   name             : "Theo Emmerich"
-  avatar           : "https://imgur.com/a/Tz0odEZ"
+  avatar           : "https://imgur.com/a/Tz0odEZ.jpeg"
   location         : "Lyon, France"
   email            : "theo.emmerich@ens-lyon.fr"
 
