--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title                    : "Theo Emmerich"
 title_separator          : "-"
 name                     : #
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : "https://theoemmerich.com" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+baseurl                  : "# the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
