--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Theo Emmerich"
 title_separator          : "-"
 name                     : #
-description              : &description "personal description"
+description              : # &description "personal description"
 url                      : "https://theoemmerich.com" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "# the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
