--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,8 @@ locale                   : "en-US"
 site_theme               : "default"
 title                    : "Theo Emmerich"
 title_separator          : "-"
-name                     : #
-description              : # &description "personal description"
 url                      : "https://theoemmerich.com" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "# the subpath of your site, e.g. "/blog"
+baseurl: ""
 repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
