--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 site_theme               : "default"
 title                    : "Theo Emmerich"
-title_separator          : "-"
+title_separator          : ""
 url                      : "https://theoemmerich.com" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl: ""
 repository               : "academicpages/academicpages.github.io"
