--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ meta_author: "Theo Emmerich"
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
-  avatar           : "https://media.licdn.com/dms/image/v2/D5603AQH6tv9h036idw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1711448468537?e=1750291200&v=beta&t=_kaJi5TzvXaB_FS95SEGjJ__mt54Xi0ze_R3xf56B5w"
+  avatar           : #"https://media.licdn.com/dms/image/v2/D5603AQH6tv9h036idw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1711448468537?e=1750291200&v=beta&t=_kaJi5TzvXaB_FS95SEGjJ__mt54Xi0ze_R3xf56B5w"
   location         : "ENS Lyon, France"
   email            : "theo.emmerich@ens-lyon.fr"
 
