--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default"
 title                    : "Theo Emmerich"
 title_separator          : ""
-url                      : "https://theoemmerich.com"  the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : "https://theoemmerich.com" #  the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl: ""
 repository               : "academicpages/academicpages.github.io"
 meta_description: "Site personnel de Théo Emmerich, chercheur en nanofluidique à l'ENS Lyon."
